<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context=".Activities.MembershipActivity">
         <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" >
        </androidx.appcompat.widget.Toolbar>

    <LinearLayout
        android:layout_below="@+id/toolbar"
        android:id="@+id/l1"
        android:onClick="one_monthmembeship"
        android:layout_marginTop="15dp"
        android:background="@drawable/button_view"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="100dp">
        <TextView
            android:layout_marginLeft="10dp"
            android:padding="5dp"
            android:textSize="18sp"
            android:textColor="@color/colorWhite"
            android:text="@string/one_month"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:layout_marginLeft="10dp"
            android:padding="5dp"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="@color/colorWhite"
            android:text="@string/one_monthfee"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:layout_below="@+id/l1"
        android:id="@+id/l2"
        android:onClick="three_monthmembership"
        android:layout_marginTop="15dp"
        android:background="@drawable/button_view"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="100dp">
        <TextView
            android:layout_marginLeft="10dp"
            android:padding="5dp"
            android:textSize="18sp"
            android:textColor="@color/colorWhite"
            android:text="@string/three_month"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:layout_marginLeft="10dp"
            android:padding="5dp"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="@color/colorWhite"
            android:text="@string/three_monthfee"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <LinearLayout
        android:layout_below="@+id/l2"
        android:id="@+id/l3"
        android:layout_marginTop="15dp"
        android:onClick="sixMonthMembership"
        android:background="@drawable/button_view"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="100dp">
        <TextView
            android:layout_marginLeft="10dp"
            android:padding="5dp"
            android:textSize="18sp"
            android:textColor="@color/colorWhite"
            android:text="@string/six_month"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:textStyle="bold"
            android:layout_marginLeft="10dp"
            android:padding="5dp"
            android:textSize="18sp"
            android:textColor="@color/colorWhite"
            android:text="@string/six_monthfee"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />


    </LinearLayout>
    <LinearLayout
        android:layout_below="@+id/l3"
        android:id="@+id/l4"
        android:onClick="OneYearMembership"
        android:layout_marginTop="15dp"
        android:background="@drawable/button_view"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="100dp">
        <TextView
            android:layout_marginLeft="10dp"
            android:padding="5dp"
            android:textSize="18sp"
            android:textColor="@color/colorWhite"
            android:text="@string/one_year"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:layout_marginLeft="10dp"
            android:padding="5dp"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="@color/colorWhite"
            android:text="@string/one_yearfee"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <Button
        android:onClick="Pay_Now"
        android:id="@+id/submit"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/colorWhite"
        android:background="@color/colorPrimary"
        android:textAllCaps="false"
        android:text="@string/pay_now"
        android:layout_alignParentBottom="true"
        android:padding="5dp"
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
</RelativeLayout>