<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context=".Activities.BookingConfirmation">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary"
        android:theme="@style/ToolbarTheme"
      />
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >
<androidx.cardview.widget.CardView
    app:cardElevation="80dp"
    app:cardCornerRadius="10dp"
    android:layout_marginTop="10dp"
    android:layout_marginBottom="10dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="5dp"
    android:layout_marginRight="10dp"
    android:layout_marginLeft="10dp"
    >



<LinearLayout
    android:padding="10dp"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_marginLeft="10dp"
    android:layout_marginRight="10dp"
    android:layout_marginTop="10dp"
    android:layout_height="match_parent"
    >
    <TextView
        android:padding="5dp"
        android:layout_gravity="start"
        android:textSize="16sp"
        android:text="@string/booked_for"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        />
    <TableLayout
        android:id="@+id/table_layout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <TableRow>
            <TextView
                android:padding="5dp"
                android:layout_gravity="start"
                android:textSize="16sp"
                android:textColor="@color/colorBlack"
                android:text="@string/booking_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />
            <TextView
                android:id="@+id/booking_date"
                android:padding="5dp"
                android:layout_gravity="start"
                android:textSize="16sp"
                android:text="30 November,2020"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />
        </TableRow>
        <TableRow>
            <TextView
                android:textColor="@color/colorBlack"
                android:padding="5dp"
                android:layout_gravity="start"
                android:textSize="16sp"
                android:text="@string/booking_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />
            <TextView
                android:id="@+id/booking_time"
                android:padding="5dp"
                android:layout_gravity="start"
                android:textSize="16sp"
                android:text="11:30 pm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />
        </TableRow>
    </TableLayout>


    <TextView
        android:id="@+id/booking_instruction"
        android:padding="5dp"
        android:textStyle="bold"
        android:textColor="@color/colorBlack"
        android:layout_gravity="start"
        android:textSize="16sp"
        android:text="@string/booking_instruction"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        />
    <TextView
        android:padding="5dp"
        android:layout_gravity="start"
        android:textSize="14sp"
        android:text="@string/booking_instructionDetail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        />
    <TextView
        android:id="@+id/trainer_available"
        android:padding="5dp"
        android:layout_gravity="start"
        android:textSize="16sp"
        android:textColor="@color/colorBlack"
        android:text="@string/trainer_available"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/trainerList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />
        <FrameLayout
            android:id="@+id/progressBarHolder"
            android:animateLayoutChanges="true"
            android:visibility="gone"
            android:alpha="0.4"
            android:background="#000000"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ProgressBar
                style="?android:attr/progressBarStyleLarge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                />

        </FrameLayout>
    </RelativeLayout>

    <Button
        android:onClick="select"
        android:padding="10dp"
        android:layout_marginTop="10dp"
        android:textColor="@color/colorWhite"
        android:textAllCaps="false"
        android:layout_gravity="center"
        android:textSize="16sp"
        android:background="@drawable/button_view"
        android:text="@string/submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        />
</LinearLayout>
</androidx.cardview.widget.CardView>
    </androidx.core.widget.NestedScrollView>

</LinearLayout>